assembly/test/failing/other/multiple_word_defines.asm
number dw 0x110
number dw 0x101